Fix increment and decrement button accessibility error by adding aria-label and adding better color contrast to remove button

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -81,6 +81,10 @@ h1 {
     text-decoration: none;
 }
 
+.remove-item {
+    color: #a01313;
+}
+
 .update-link:hover {
     color: #000;
 }
